<resources>
    <string name="app_name">Mr.Su</string>

    <!--ToolBar name-->
    <string name="title_dongtan">动弹</string>
    <string name="title_play">弹一弹</string>
    <string name="title_zonghe">综合</string>
    <string name="title_faxian">发现</string>
    <string name="title_my">我的</string>
    <string name="title_zixun_info">资讯详情</string>
    <string name="title_soft_info">软件详情</string>
    <string name="loading">正在加载</string>
    <string name="dianji_login">点击头像登录</string>
    <string name="jifen">积分</string>
    <string name="isNet">当前无网络连接</string>
    <string name="send">发送</string>
    <string name="pub_comment">评论成功</string>


    <!--SearchView hint-->
    <string name="search_send_comment">发表评论</string>

    <!--发现-->
    <string name="fx_mytj">码云推荐</string>
    <string name="fx_kyrj">开源软件</string>
    <string name="fx_sys">扫一扫</string>
    <string name="fx_yyy">摇一摇</string>
    <string name="fx_yyy_lipin">礼品</string>
    <string name="fx_text_lipin">摇一摇抢礼品</string>
    <string name="fx_text_news">摇一摇获取资讯</string>
    <string name="fx_text_huodong">抽奖活动已结束，请期待下次活动！</string>
    <string name="fx_yyy_news">资讯</string>
    <string name="fx_fjcxy">附近的程序员</string>
    <string name="fx_xxhd">线下活动</string>
    <string name="fx_to_sign_up">正在报名</string>
    <string name="fx_to_sign_down">截止报名</string>
    <string name="fx_my_sign_down">我要报名</string>

    <string name="fx_oss_fl">分类</string>
    <string-array name="find_tab_titlename">
        <item>推荐</item>
        <item>最新</item>
        <item>热门</item>
        <item>国产</item>
    </string-array>

    <!--动弹-->
    <string name="dianzan">赞</string>
    <string name="pinglun">评论</string>
    <string name="zhuanfa">转发</string>

    <!--搜索-->
    <string name="sear_text">搜索博客、软件、资讯、问答、找人</string>
    <string name="cencel_sear">取消</string>
    <string name="empty_search">清空搜索历史</string>

    <!--综合Fragment复用 标题-->
    <string-array name="newsTitle">
        <item>开源资讯</item>
        <item>推荐博客</item>
        <item>热门资讯</item>
        <item>最新博客</item>
    </string-array>
    <string name="jishu_wenda">技术问答</string>


    <!--我的-->
    <string name="mine_xiaoxis">我的消息</string>
    <string name="mine_blog">我的博客</string>
    <string name="mine_wenda">我的问答</string>
    <string name="mine_huodong">我的活动</string>
    <string name="mine_tuandui">我的团队</string>
    <string name="mine_tweet">动弹</string>
    <string name="mine_shoucang">收藏</string>
    <string name="mine_guanzhu">关注</string>
    <string name="mine_fensi">粉丝</string>

    <!--设置-->
    <string name="setting_cache">清理缓存</string>
    <string name="setting_exit">双击退出</string>
    <string name="setting_yijian">意见反馈</string>
    <string name="setting_guanyu">关于我们</string>
    <string name="setting_jiancha">检查更新</string>
    <string name="setting_zhuxiao">注销</string>
    <string name="setting">设置</string>

</resources>
