<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.usian.android_app_oschina.controller.activity.mine_activity.SettingActivity">

    <include
        android:layout_width="match_parent"
        android:layout_height="45dp"
        layout="@layout/title_bar_icon"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/settind_qlhc"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/setting_cache"
                android:textColor="@color/black_dan1"
                android:textSize="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="center"
                android:text="0.0kb"
                android:id="@+id/textView" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginLeft="10dp"
            android:background="#DBDBDB"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_marginLeft="3dp"
                android:text="@string/setting_exit"
                android:textColor="@color/black_dan1"
                android:textSize="15dp"/>

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/settind_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                app:kswTintColor="@color/actionbar_background"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/setting_yijian"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:background="@color/white">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:padding="10dp"
                android:text="@string/setting_yijian"
                android:id="@+id/textView3"
                android:textColor="@color/black_dan1"
                android:textSize="15dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:background="#DBDBDB"
            />

        <LinearLayout
            android:id="@+id/setting_guanyu"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:background="@color/white">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_marginLeft="3dp"
                android:text="@string/setting_guanyu"
                android:textColor="@color/black_dan1"
                android:textSize="15dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginLeft="10dp"
            android:background="#DBDBDB"
            />

        <LinearLayout
            android:id="@+id/setting_update"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:background="@color/white">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_marginLeft="3dp"
                android:text="@string/setting_jiancha"
                android:id="@+id/textView2"
                android:textColor="@color/black_dan1"
                android:textSize="15dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/setting_zhuxiao"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:background="@color/white">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_marginLeft="3dp"
                android:text="@string/setting_zhuxiao"
                android:textColor="@color/black_dan1"
                android:textSize="15dp"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>