<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@mipmap/bg_my">

        <ImageView
            android:id="@+id/iv_mine_shezhi"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/btn_my_setting"
            android:layout_margin="15dp"/>

        <ImageView
            android:id="@+id/iv_mine_erweima"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/btn_qrcode"
            android:layout_margin="15dp"/>

        <ImageView
            android:id="@+id/iv_mima_login"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_login_username"
            android:scaleType="centerInside"
            android:background="@drawable/title_name_iv"/>

        <TextView
            android:id="@+id/tv_mine_tishi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_mima_login"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:text="@string/dianji_login"
            android:textSize="10dp"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="50dp"
        android:background="#DBDBDB"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/lin_mime_xiaoxi"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:padding="10dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_my_message"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mine_xiaoxis"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black_dan1"
            android:textSize="15dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_arrow_right"
            android:layout_gravity="center"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="50dp"
        android:background="#DBDBDB"
        />

    <LinearLayout
        android:id="@+id/lin_mime_blog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:padding="10dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_my_blog"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mine_blog"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black_dan1"
            android:textSize="15dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_arrow_right"
            android:layout_gravity="center"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="50dp"
        android:background="#DBDBDB"
        />

    <LinearLayout
        android:id="@+id/lin_mime_wenda"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:padding="10dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_my_question"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mine_wenda"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black_dan1"
            android:textSize="15dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_arrow_right"
            android:layout_gravity="center"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="50dp"
        android:background="#DBDBDB"
        />

    <LinearLayout
        android:id="@+id/lin_mime_huodong"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:padding="10dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_my_event"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mine_huodong"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black_dan1"
            android:textSize="15dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_arrow_right"
            android:layout_gravity="center"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="50dp"
        android:background="#DBDBDB"
        />

    <LinearLayout
        android:id="@+id/lin_mime_tuandui"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:padding="10dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_my_team"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mine_tuandui"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black_dan1"
            android:textSize="15dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_arrow_right"
            android:layout_gravity="center"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#DBDBDB"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        />


</LinearLayout>